infra/base/longhorn/longhorn-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system
  labels:
    pihole-dns-enabled: "true"
spec:
  parentRefs:
    - name: istio-ingress
      namespace: istio-system
      sectionName: https
  hostnames:
    - longhorn.local.abbottland.io
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
